# readmat

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: pylint.yml  python-publish.yml
docs/: field_contents.md  mat_file_format.md  ss_data_breakdown.xlsx  subsystem_data_format.md  unknowns.md
matio/: class_parser.py  convert.py  matio5.py  matio7.py  matio_base.py  savemat.py  subsystem.py
matio/utils/: __init__.py  matmap.py  mattables.py  mattimes.py
patches/: patch1.1.patch  patch1.3.patch  scipy_changes.patch
readmat/: __init__.py  class_parser.py  readmat.py  subsystem.py  subsystem_parser.py
tests/test_hdf5/: basic_v7.mat  basic_v73.mat  struct_cell_v7.mat  struct_cell_v73.mat
tests/test_mcos/test_calendarDuration/: cdur1.mat  cdur2.mat  cdur3.mat  cdur4.mat  cdur5.mat  cdur6.mat  cdur7.mat  cdur8.mat  test_caldur_v7.mat  test_caldur_v73.mat
tests/test_mcos/test_categorical/: cat1.mat  cat10.mat  cat2.mat  cat3.mat  cat4.mat  cat5.mat  cat6.mat  cat7.mat  cat8.mat  cat9.mat  test_categorical_v7.mat  test_categorical_v73.mat
tests/test_mcos/test_datetime/: datetime_gen.m  dt_array.mat  dt_base.mat  dt_empty.mat  dt_fmt.mat  dt_tz.mat  test_datetime.py  test_datetime_v7.mat  test_datetime_v73.mat
tests/test_mcos/test_dict/: dict1.mat  dict2.mat  dict3.mat  dict4.mat  test_dict_v7.mat  test_dict_v73.mat
tests/test_mcos/test_duration/: dur_array.mat  (+11 more)
tests/user_defined_test/: nested_object.mat  object_array.mat  object_with_constructor.mat  object_with_default.mat  object_without_constructor.mat  user_defined_test.py  usr_gen.m
(+70 files in other folders)
