[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readmat"
version = "0.1.0"
description = "A package for reading MATLAB .mat files"
authors = [{name = "foreverallama", email = "klockatoo@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "scipy==1.16.0",
    "numpy==2.2.2",
    "pytz"
]

[tool.setuptools]
packages = ["readmat"]

[project.urls]
Homepage = "https://github.com/foreverallama/readmat"
